# CCMakeGen

./: .gitignore  CMakeLists.txt
folderGenLib/: CMakeLists.txt
folderGenLib/include/: genFolders.h
folderGenLib/src/: genFolders.cpp
folderGenLib/test/: CMakeLists.txt
folderGenLib/test/src/: test.cpp
include/: genFolders.h
src/: genFolders.cpp  main.cpp  test.cpp
